--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,7 @@
 [pytest]
 pythonpath = .
 markers =
-    need_review: for tests in need of review
+    xfail: mark test as expected to fail
+    skip: mark test as skipped
+    guest: mark test for guest users
+    user: mark test for registered users
